Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-10826

Regression in LU-9372 on OPA enviroment and no recovery triggered

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.12.0
    • None
    • None
    • master, centos7.4
      1 x MDS/MDT, 1 x OSS/OST and 1 client with OPA-10.6
    • 3
    • 9223372036854775807

      Looks like LU-9372 has regression on OPA enviroment and somehow when test_req_buffer_pressure is enabled (test_req_buffer_pressure=1) on OSS or MDS, client never reconnect and no trigger Lustre recovery.

      [root@es14k-vm1 ~]# umount -t lustre -a
      [root@es14k-vm1 ~]# lustre_rmmod 
      [root@es14k-vm1 ~]# vi /etc/modprobe.d/lustre.conf
      
      options ptlrpc test_req_buffer_pressure=1
      
      [root@es14k-vm1 ~]# mount -t lustre /dev/ddn/scratch0_ost0000 /lustre/scratch0/ost0000
      
      [root@es14k-vm1 ~]# cat /proc/fs/lustre/obdfilter/scratch0-OST0000/recovery_status 
      status: WAITING_FOR_CLIENTS
      

      Never client Reconnected and no lustre recovery triggered

            bfaccini Bruno Faccini (Inactive)
            ihara Shuichi Ihara (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: